hard-gists/c613bd0fad5de00bab2e/run.log
=== Docker Run Log for c613bd0fad5de00bab2e ===
Started at: Mi 29. Okt 19:53:56 CET 2025

[2025-10-29 19:53:56] START: Running container for c613bd0fad5de00bab2e
[2025-10-29 19:53:56] SUCCESS: Container 00426cbdf725a2f96c1779d3f11b39a1e99db49e31f96e96c9a6c2e503c01d5f started for c613bd0fad5de00bab2e
=== Container logs for c613bd0fad5de00bab2e ===
  File "/snippet.py", line 92
    except smtplib.SMTPConnectError, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for c613bd0fad5de00bab2e ===
[2025-10-29 19:53:59] INFO: Container 00426cbdf725a2f96c1779d3f11b39a1e99db49e31f96e96c9a6c2e503c01d5f has stopped
